--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://GerardoMaciasRomo.github.io",
+
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
